--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,11 +2,11 @@ SRCS	= main.cpp \
 		  Animal.cpp \
 		  Dog.cpp \
 		  Cat.cpp \
-		  Wrong.cpp
+		  Brain.cpp
 
 OBJS	=  ${SRCS:.cpp=.o}
 
-NAME	= ex00
+NAME	= ex01
 CC		= c++
 RM		= rm -f
 CFLAGS	= -Wall -Wextra -Werror -std=c++98
